Fix orderBar overflow

--- a/css/base.css
+++ b/css/base.css
@@ -49,7 +49,7 @@ body {
   background-color: var(--mainNavColor);
   z-index: 4;
   display: grid;
-  grid-template-columns: 0.5fr 3fr 0.5fr;
+  grid-template-columns: 0.5fr minmax(20%,3fr) 0.5fr;
   grid-gap: 10px;
 }
 .orderScroll {
